# agentic-search

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: conditionals.py  graph.py  state.py
app/agent/nodes/: analyze.py  generate.py  grade.py  retrieve.py  rewrite.py
app/models/: api.py  card.py
app/search/: elasticsearch_client.py
eval/: improve.py  judge.py  pokemon-tcg-search-golden-dataset-v1.json  pokemon-tcg-search-golden-dataset.json  run_eval.py
eval/results/: eval_20260403_084943.json  eval_20260403_094638.json  eval_20260403_095028.json  eval_20260403_095406.json  eval_20260403_095716.json  eval_20260403_100055.json  eval_20260403_100409.json  eval_20260403_100706.json  eval_20260403_103839.json  eval_20260403_110217.json  eval_20260403_111558.json  eval_20260403_112432.json  eval_20260403_112924.json  eval_20260403_112935.json  eval_20260403_113120.json  eval_20260403_113835.json  eval_20260403_115517.json  eval_20260403_125358.json  eval_20260403_130136.json  eval_20260403_130146.json  eval_20260403_130521.json  eval_20260403_130544.json  eval_20260403_131022.json  eval_20260403_132348.json  eval_20260403_132743.json  eval_20260403_134547.json  eval_20260403_134921.json  improve_report_20260403_100708.md
frontend/: app.js  index.html  style.css
ingest/: build_embeddings.py  fetch_cards.py  index_cards.py
tests/: test_agent_graph.py  test_elasticsearch_client.py  test_ingest.py
